Created searchEmail function
