# backend/src/app.js
@@ -37,7 +37,7 @@ app.get('/v0/email', auth.check, mail.getAll);
 app.get('/v0/email/:id', auth.check, mail.getById);
 // moving email
 app.put('/v0/email/:id', auth.check, mail.trashEmail);
-
+app.get('/v0/results', auth.check, mail.searchEmail);
 app.post('/v0/email', auth.check, mail.postEmail);
 
 app.use((err, req, res, next) => {
